# seecr-license

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
doc/: license.conf
seecrlicense/: __init__.py  __version__.py  app.py  app_test.py  applylicense.py  applylicense_test.py  copyrightset.py  copyrightset_test.py  license.py  license_test.py  sourcefile.py  sourcefile_test.py  tools.py
seecrlicense/license-data/: Apache2.header  GPLv2.header  GPLv3.header  arr.header
